adaptive footer and fix mistakes

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="robots" content="none">
     <link rel="shortcut icon" href="#">
     <link rel="stylesheet" href="style/style.css">
-    <title>Web page</title>
+    <title>My first web-page</title>
 </head>
 
 <body>
@@ -225,7 +225,8 @@
             <section class="page__leafs leafs">
                 <div class="leafs__text">
                     <h3 class="leafs__tittle">Monstera Leafs</h3>
-                    <p class="leafs__subtittle">Vestibulum sit amet urna turpis. Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt.</p>
+                    <p class="leafs__subtittle">Vestibulum sit amet urna turpis. Mauris euismod elit et nisi ultrices,
+                        ut faucibus orci tincidunt.</p>
                 </div>
                 <div class="leafs__photo-data photo-data">
                     <div class="photo-data__exposure">
@@ -275,7 +276,8 @@
             <section class="page__star-fall star-fall">
                 <div class="star-fall__text">
                     <h3 class="star-fall__tittle">Star fall in the Himalayas</h3>
-                    <p class="star-fall__subtittle">Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula.</p>
+                    <p class="star-fall__subtittle">Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex,
+                        condimentum dapibus congue et, vulputate ut ligula.</p>
                 </div>
                 <div class="star-fall__photo-data photo-data">
                     <div class="photo-data__exposure">
@@ -320,7 +322,7 @@
         <footer class="footer">
             <div class="footer__body">
                 <div class="footer__top">
-                    <div class="footer__top-item">
+                    <div class="footer__top-wrapper">
                         <div class="footer__top-logo">
                             <img src="img/footer/logo.png" alt="footer-logo">
                             <p class="footer__top-info">Photographers & videographers capturing the world around us.</p>
@@ -348,37 +350,25 @@
                     </div>
                 </div>
 
-                <div class="footer__subscribe subscribe">
-                    <div class="subscribe__text">
-                        <div class="subscribe__tittle"></div>
-                        <div class="subscribe__subtittle"></div>
-                    </div>
-                    <div class="subscribe__button">
-                        <form class="subscribe__form" action="#">
-                            <input type="email">
-                            <button type="submit"> OK</button>
-                        </form>
+                <div class="footer__subscribe">
+                    <div class="subscribe">
+                        <div class="subscribe__text">
+                            <div class="subscribe__tittle">Subscribe to our newsletter</div>
+                            <div class="subscribe__subtittle">Read about all the things we do.</div>
+                        </div>
+                        <div class="subscribe__button">
+                            <form class="subscribe__form" action="#">
+                                <input name="user-email" type="email">
+                                <button type="submit"> OK</button>
+                            </form>
+                        </div>
                     </div>
                 </div>
 
-                <div class="footer__copyright copyright">
-                    <div class="copyright__text"></div>
-                    <div class="copyright__social social">
-                        <div class="social__twitter">
-                            <a href="https://google.com" target="_blank">
-                                <img src="#" alt="twitter-logo">
-                            </a>
-                        </div>
-                        <div class="social__instagram">
-                            <a href="https://google.com" target="_blank">
-                                <img src="#" alt="instagram-logo">
-                            </a>
-                        </div>
-                        <div class="social__facebook">
-                            <a href="https://google.com" target="_blank">
-                                <img src="#" alt="facebook-logo">
-                            </a>
-                        </div>
+                <div class="footer__copyright">
+                    <div class="footer__copyright-text">
+                        <p> © Aperture Photography, Inc. All rights reserved. </p>
+                        <a href="https://google.com">Licensing</a>
                     </div>
                 </div>
             </div>
